cmake_minimum_required(VERSION 3.0.0)
project(sandbox VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(sandbox ${CMAKE_CURRENT_SOURCE_DIR}/src/Sandbox.cpp)

if (NOT TARGET xme)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../xme xme)
endif ()

target_link_libraries(sandbox xme)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
